--- a/src/app/menu-computer/menu-computer.component.html
+++ b/src/app/menu-computer/menu-computer.component.html
@@ -18,7 +18,7 @@
             </div>
             <div class="item">
                 <!-- <div class="ui button"> -->
-                <a class="ui red button circular" routerLink="/enter/l" style="background-color: #f55c4d !important;">Se deconnecter</a>
+                <a class="ui red button circular" (click)="disconnect()" style="background-color: #f55c4d !important;">Se deconnecter</a>
                 <!-- <a class="ui primary button circular" style="background-color: #4d92f5 !important; border-radius: 0px 18px 18px 0px !important;" routerLink="/enter/r">S'inscrire</a> -->
                 <!-- </div> -->
             </div>
