--- a/src/app/traveller/traveller.component.html
+++ b/src/app/traveller/traveller.component.html
@@ -34,7 +34,7 @@
             <div class="ui segments">
             <div class="ui segment">
                 <!--<button class="small ui right floated button">-->
-                <i class="right external icon" style="cursor: pointer;" routerLink="/manager/mail"></i>
+                <i class="large right external icon" style="cursor: pointer;" routerLink="/manager/mail"></i>
                     <!--Mails-->
                 <!--</button>-->
                 <b>Messages récents</b>
