--- a/src/app/details-offer/details-offer.component.html
+++ b/src/app/details-offer/details-offer.component.html
@@ -1,46 +1,57 @@
-<H1>
-  {{offer_Object.title}}
-</H1>
-<div class="ui image" style="max-width: 20%">
-  <img class="ui rounded fluid image" src="{{offer_Object.img_url}}">
-</div>
-<br>
-<br>
-<div class="ui small images">
-  <img class="ui rounded fluid image" src="{{offer_Object.img_url}}">
-  <img class="ui rounded fluid image" src="{{offer_Object.img_url2}}">
-  <img class="ui rounded fluid image" src="{{offer_Object.img_url3}}">
-</div>
+<div class="ui container">
+    <H1 class="center">
+        {{offer_Object.title}}
+    </H1>
 
-<table class="ui table">
-  <thead>
-  <tr><th class="six wide">Détails</th>
-    <th class="six wide">Valeur</th>
-  </tr></thead>
-  <tbody>
-  <tr>
-    <td>Ville</td>
-    <td>{{offer_Object.city}}</td>
-  </tr>
-  <tr>
-    <td>Code postal</td>
-    <td>{{offer_Object.zip_code}}</td>
-  </tr>
-  <tr>
-    <td>Domaine du service</td>
-    <td>{{offer_Object.domaine}}</td>
-  </tr>
-  <tr>
-    <td>Capacité d'accueil</td>
-    <td>{{offer_Object.nb_seat}}</td>
-  </tr>
-  <tr>
-    <td>Date de publication</td>
-    <td>{{offer_Object.publication_date}}</td>
-  </tr>
-  </tbody>
-  <tfoot>
-  <tr><th>footer</th>
-    <th>footer</th>
-  </tr></tfoot>
-</table>
+    <div class="ui nine wide image" style="max-width: 50%;">
+        <img id="mainImg" class="ui rounded fluid image" src="{{offer_Object.img_url}}">
+    </div>
+    <br>
+    <br>
+    <div class="ui small nine wide images">
+        <img id="mini1" src="{{mini_img1}}" class="ui rounded fluid image three wide" src="{{offer_Object.img_url}}" (click)="onclickMiniImg(1)">
+        <img id="mini2" class="ui rounded fluid image three wide disabled" src="{{offer_Object.img_url2}}" (click)="onclickMiniImg(2)">
+        <img id="mini3" class="ui rounded fluid image three wide disabled" src="{{offer_Object.img_url3}}" (click)="onclickMiniImg(3)">
+    </div>
+
+    <table class="ui table">
+        <thead>
+        <tr>
+            <th class="six wide">Détails</th>
+            <th class="six wide">Descriptifs</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Ville</td>
+            <td>{{offer_Object.city}}</td>
+        </tr>
+        <tr>
+            <td>Code postal</td>
+            <td>{{offer_Object.zip_code}}</td>
+        </tr>
+        <tr>
+            <td>Domaine du service</td>
+            <td>{{offer_Object.domaine}}</td>
+        </tr>
+        <tr>
+            <td>Capacité d'accueil</td>
+            <td>{{offer_Object.nb_seat}}</td>
+        </tr>
+        <tr>
+            <td>Date de publication</td>
+            <td>{{offer_Object.publication_date}}</td>
+        </tr>
+        </tbody>
+        <tfoot>
+        <tr>
+            <th>footer</th>
+            <th>footer</th>
+        </tr>
+        </tfoot>
+    </table>
+    <H4>Description :</H4>
+    <div class="ui text">
+        {{offer_Object.content}}
+    </div>
+</div>
