--- a/src/app/hoster/hoster.component.html
+++ b/src/app/hoster/hoster.component.html
@@ -66,7 +66,7 @@
                             <div class="four wide column">
                                 <div class="ui field">
                                     <label>Cpacité d'accueil</label>
-                                    <input [(ngModel)]="nb_seat" type="text" placeholder="Ville" required>
+                                    <input [(ngModel)]="nb_seat" type="text" placeholder="Ex: 2" required>
                                 </div>
                             </div>
                             <!--<div class="two wide column">
